# youtube-data-to-markdown

./: Cargo.toml
data/: eps_page_1.json  eps_page_2.json  playlist_entries.json
markdown_outputs/: episode_0035.md  episode_0037.md  episode_0047.md  episode_0051.md  episode_0052.md  episode_0053.md  episode_0054.md  episode_0055.md
src/: lib.rs  main.rs  parsing.rs  playlist.rs
templates/: article.md
