[package]
name = "youtube_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
lazy_static = "1.4.0"
phf = { version = "0.11.1", features = ["macros"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
tera = "1.17.1"
